syntax = "proto3";

option csharp_namespace = "AuthService";

package auth;


message LoginRequest {
    string username = 1;
    string password = 2;
}

message LoginReply {
    string token = 1;
    int32 status = 2;
}

message VerifyRequest {
    string token = 1;
}

message VerifyReply {
    string username = 1;
    int32 status = 2;
}

service Auth {
    rpc Login(LoginRequest) returns (LoginReply);
    rpc Verify(VerifyRequest) returns (VerifyReply);
}

